--- a/UzunTec.WinUI.Controls/Properties/Resources.resx
+++ b/UzunTec.WinUI.Controls/Properties/Resources.resx
@@ -119,63 +119,63 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="calendarDark" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\calendardark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Resources\calendarDark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="calendarWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\calendarwhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>..\Resources\calendarWhite.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="close_off_dark" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="close-off-dark" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\close-off-dark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="close_on" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="close-on" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\close-on.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="maximize_off_dark" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="maximize-off-dark" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\maximize-off-dark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="maximize_on" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="maximize-on" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\maximize-on.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="minimize_off_dark" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="minimize-off-dark" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\minimize-off-dark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="minimize_on" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="minimize-on" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\minimize-on.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Roboto_Black" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Roboto-Black" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Roboto-Black.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Roboto_BlackItalic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Roboto-BlackItalic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Roboto-BlackItalic.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Roboto_Bold" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Roboto-Bold" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Roboto-Bold.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Roboto_BoldItalic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Roboto-BoldItalic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Roboto-BoldItalic.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Roboto_Italic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Roboto-Italic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Roboto-Italic.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Roboto_Light" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Roboto-Light" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Roboto-Light.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Roboto_LightItalic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Roboto-LightItalic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Roboto-LightItalic.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Roboto_Medium" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Roboto-Medium" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Roboto-Medium.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Roboto_MediumItalic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Roboto-MediumItalic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Roboto-MediumItalic.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Roboto_Regular" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Roboto-Regular" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Roboto-Regular.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Roboto_Thin" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Roboto-Thin" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Roboto-Thin.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="Roboto_ThinItalic" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="Roboto-ThinItalic" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Roboto-ThinItalic.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="SegMDL2" type="System.Resources.ResXFileRef, System.Windows.Forms">
